# weather-checker

./: .env  LICENSE  README.md  main.py  pyproject.toml  settings_handler.py  weather_handler.py
colab-notebook/: python-project-weather-checker.ipynb  python-project-weather-checker.py
handlers/: dates_handler.py  settings_handler.py  weather_handler.py
resources/: settings.json
