[tool.poetry]
name = "weather checker application"
version = "0.1.0"
description = "An application for checking the weather worldwide"
authors = ["Alon Shmueli <alonshmu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
